finished education outline

--- a/education.html
+++ b/education.html
@@ -31,13 +31,13 @@
 <br>
 <img src="fths.png" class="eduimg" alt="educationimg">
 <div class="row">
-  <div class="col"><h1 class="hfour">Header</h1>
+  <div class="col"><h1 class="hfour"><u>Header</u></h1>
     <p class="pthree">stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff </p>
 </div>
-<div class="col"><h1 class="hfour">Header</h1>
+<div class="col"><h1 class="hfour"><u>Header</u></h1>
   <p class="pthree">stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff </p>
 </div>
-<div class="col"><h1 class="hfour">Header</h1>
+<div class="col"><h1 class="hfour"><u>Header</u></h1>
   <p class="pthree">stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff </p>
 </div>
 </div>
