all the work i did today 11/2

--- a/education.html
+++ b/education.html
@@ -41,5 +41,8 @@
   <p class="pthree">stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff </p>
 </div>
 </div>
+<div class="footer1">
+  <a id="footerbutton1" href="https://www.frhsd.com/freeholdtwp" target="_blank">Schools Website</a>
+</div>
     </body>
 </html>
