11/3/2023 work needa do more on this page

--- a/interest.html
+++ b/interest.html
@@ -28,5 +28,28 @@
     <a href="contact.html">Contact</a>
   </div>
 </nav>
+<div class="row">
+  <div class="col"> </div>
+  <div class="col"> 
+    <h1 class="hone"> Header 🏀🖥️</h1>
+  <h2 class="htwo">write stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff
+    </h2>
+    <br>
+  </div>
+  <div class="col"> </div>
+    </div>
+    <div class="row">
+      <div class="col col1"> 
+<h1 class="hsix">Basketball.</h1>
+<img src="fths.png" class="bballimg" alt="basketballimage">
+<h1 class="hseven">Why I like it</h1>
+      </div>
+      <div class="col"> 
+
+      </div>
+      <div class="col"> 
+
+      </div>
+
     </body>
 </html>
