--- a/interest.html
+++ b/interest.html
@@ -41,14 +41,18 @@
     <div class="row">
       <div class="col col1"> 
 <h1 class="hsix">Basketball.</h1>
-<img src="fths.png" class="bballimg" alt="basketballimage">
+<img src="jaysontatum1-0.png" class="bballimg" alt="basketballimage">
 <h1 class="hseven">Why I like it</h1>
       </div>
-      <div class="col"> 
-
+      <div class="col col1"> 
+        <h1 class="hsix">Web Design.</h1>
+        <img src="webdesign.jpg" class="bballimg" alt="webdesignimg">
+        <h1 class="hseven">Why I like it</h1>
       </div>
-      <div class="col"> 
-
+      <div class="col col1"> 
+        <h1 class="hsix">Exercise.</h1>
+        <img src="dumbell.jpg" class="bballimg" alt="dumbellimg">
+        <h1 class="hseven">Why I like it</h1>
       </div>
 
     </body>
