end of day today

--- a/contact.html
+++ b/contact.html
@@ -28,5 +28,42 @@
     <a href="contact.html">Contact</a>
   </div>
 </nav>
+<div class="row">
+  <div class="col"> 
+    
+  </div>
+  <div class="col col2">
+    <form action="mailto:555mikeman555@gmail.com" method="post" enctype="text/plain">
+     <h1> Name:</h1><br>
+      <input type="text" name="name"><br>
+     <h1> E-mail:</h1><br>
+      <input type="text" name="mail"><br>
+      <h1>Comment:</h1></form><br>
+      <input type="text" name="comment" size="50"><br><br>
+      <input type="submit" value="Send">
+      <input type="reset" value="Reset">
+      </form>
+      </div>
+      <div class="col"> 
+
+      </div>
+  </div>
+  <div class="row">
+    <div class="col"> 
+      <div class="container1"> 
+        <iframe class="responsive-iframe" src="https://www.instagram.com/angel_boms"></iframe>
+        <br> <a href="https://www.instagram.com/angel_boms" target="_blank">
+          <h1 class="hfive">Instagram</h1>
+        </a>
+       </div>
+    </div>
+    <div class="col"> 
+      <div class="container1"> 
+        <iframe class="responsive-iframe" src="https://mail.google.com/mail/u/0/#inbox?compose=jrjtXJTmPmqgWVbkmlpzHWvFMMJkkPczqXkwrrBtNjJBbSGgdSNMMZSGfTzvptkgfzfqfMxB"></iframe>
+        <br> <a href="https://mail.google.com/mail/u/0/#inbox?compose=jrjtXJTmPmqgWVbkmlpzHWvFMMJkkPczqXkwrrBtNjJBbSGgdSNMMZSGfTzvptkgfzfqfMxB" target="_blank">
+          <h1 class="hfive">E-mail</h1>
+        </a>
+       </div>
+    </div>
     </body>
 </html>
