put some words down for my first two pages

--- a/about.html
+++ b/about.html
@@ -30,16 +30,20 @@
 </nav>
     </body>
     <div class="row">
-      <div class="col"><h1 class="hthree">Header</h1>
-        <p class="ptwo">stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff </p>
-        <h1 class="hthree">Header</h1>
-        <p class="ptwo">stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff </p>
+      <div class="col"><h1 class="hthree">HTML </h1>
+        <p class="ptwo">I learned HTML back in my sophomore year of high school in my first Web Design class. Throughout the years, I have gained experience with it and know the ins and outs of it. This is my strongest section of web designing!
+        </p>
+        <h1 class="hthree">CSS</h1>
+        <p class="ptwo">You can’t have a GREAT website without making it look pretty and that is where CSS comes to play. I’ve been using CSS the past couple of years in high school, and I use it to make my websites look more visually appealing and functional. I am pretty good at using it to spice things up, and to make themes throughout the whole website.  
+        </p>
        
       </div>
-        <div class="col"><h1 class="hthree">Header</h1>
-          <p class="ptwo">stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff </p>
-          <h1 class="hthree">Header</h1>
-          <p class="ptwo">stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff </p>
+        <div class="col"><h1 class="hthree">Bootstrap 5</h1>
+          <p class="ptwo">I learned Bootstrap 5 in the middle of my sophomore year of high school, and I can never go back. It is very useful to make designing easier, and I am pretty efficient with it. Throughout the past 2 years, I have used BS5 to make better structured websites, and this allows me to make them more navigation friendly.
+          </p>
+          <h1 class="hthree">JavaScript</h1>
+          <p class="ptwo">I started to learn about Javascript near the beginning of my Junior year of high school, and it is so far my newest language. Right now, I could use some work on it, but I have some of the basics down. I do find it really interesting as it can make functions to things, and in a couple years who knows how good I will be with it!
+          </p>
          
         </div>
         </div>
