--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 <div class="row">
   <div class="col"></div>
   <div class="col"><h1 class="hone"> <br> Hi! I'm Angel Bomova 😁</h1>
-  <h2 class="htwo">What i am Stuff I do that’s website/coding related
+  <h2 class="htwo">High School Web Designer (HTML/CSS/JS)
     </h2>
-    <p class="pone">write stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff </p>
+    <p class="pone">I’m a High School student that likes creating websites ranging from a pet rock to a local restaurant, click around to see my work and progress!
+    </p>
   </div>
   <div class="col"></div>
   </div>
@@ -46,7 +47,8 @@
       <div class="container">
         <img src="pumpkin.png" alt="Avatar" class="image" width="300px" height="300px">
         <div class="overlay">
-          <div class="text">Image with hover effect with text </div>
+          <div class="text">Here is one of my first projects of my 2023-2024 School Year!
+          </div>
         </div>
       </div>
        
@@ -58,7 +60,8 @@
       <div class="container">
         <img src="snakegame.png" alt="Avatar" class="image" width="300px" height="300px">
         <div class="overlay">
-          <div class="text">Image with hover effect with text </div>
+          <div class="text">Here is a cool snake game I made using JavaScript!
+          </div>
         </div>
       </div>
     </div>
