Got a lot of the content in, need to do the last 2

--- a/education.html
+++ b/education.html
@@ -31,14 +31,21 @@
 <br>
 <img src="fths.png" class="eduimg" alt="educationimg">
 <div class="row">
-  <div class="col"><h1 class="hfour"><u>Header</u></h1>
-    <p class="pthree">stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff </p>
+  <div class="col"><h1 class="hfour"><u>High School Classes Related to Coding/Web Designing:   </u></h1>
+    <p class="pthree">•Honors Web Design WDPP (H), Grade: A+ <br>
+      •Honors Advanced Web Design WDP, Grade: A+  <br>
+      •Honors NJIT IS219 Advanced Website Development W, Grade: In Progress <br>
+      •AP Computer Science A (AP), Grade: In Progress 
+       </p>
 </div>
-<div class="col"><h1 class="hfour"><u>Header</u></h1>
-  <p class="pthree">stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<div class="col"><h1 class="hfour"><u>Future Classes I’m Hoping to Take in College:</u></h1>
+  <p class="pthree">In the future, I am hoping to major in Computer Science. I will plan to get my BS in Computer Science, and hopefully finish schooling by 2031 (Rough Estimate).
+  </p>
 </div>
-<div class="col"><h1 class="hfour"><u>Header</u></h1>
-  <p class="pthree">stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff </p>
+<div class="col"><h1 class="hfour"><u>Current Work Experience (2023):</u></h1>
+  <p class="pthree">I’ve done small things like babysitting but I will only be adding my official Work Experience here. <br>
+    High School Waitstaff at Applewood Estates. <br> Note: I have obtained this job recently. I Assist and serve the elderly/disabled with meals. I work 3 times a week with 4 hour shifts.
+     </p>
 </div>
 </div>
 <div class="footer1">
