--- a/work.html
+++ b/work.html
@@ -31,8 +31,9 @@
 <div class="row">
   <div class="col"> </div>
   <div class="col"> 
-    <h1 class="hone"> Header</h1>
-  <h2 class="htwo">write stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff
+    <h1 class="hone"> <u>My Work</u></h1>
+  <h2 class="htwo">This page displays my first two years at the FTHS Web Design Program and three websites from Senior year. I plan to continue adding websites to this page as right now writing this it is only November 2023. 
+
     </h2>
     <br>
   </div>
