rough draft done

--- a/interest.html
+++ b/interest.html
@@ -31,8 +31,8 @@
 <div class="row">
   <div class="col"> </div>
   <div class="col"> 
-    <h1 class="hone"> Header 🏀🖥️</h1>
-  <h2 class="htwo">write stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff stuff
+    <h1 class="hone"> My Interests!      🏀🖥️</h1>
+  <h2 class="htwo">This page I will go over 3 of my favorite activities/hobbies! Hopefully this will help you learn more about me and my day to day life!
     </h2>
     <br>
   </div>
@@ -42,17 +42,20 @@
       <div class="col col1"> 
 <h1 class="hsix">Basketball.</h1>
 <img src="jaysontatum1-0.png" class="bballimg" alt="basketballimage">
-<h1 class="hseven">Why I like it</h1>
+<h1 class="hseven">I started playing basketball in the Second Grade. Ever since then I fell in love with the sport. I play whenever I have free time, and in the Summer I play everyday. On top of playing, my favorite team is the Boston Celtics. When I was younger I remember watching videos on YouTube about the Celtics with Larry Bird, and they became my favorite team. Celtics 2024 NBA Champions.
+</h1>
       </div>
       <div class="col col1"> 
         <h1 class="hsix">Web Design.</h1>
         <img src="webdesign.jpg" class="bballimg" alt="webdesignimg">
-        <h1 class="hseven">Why I like it</h1>
+        <h1 class="hseven">I remember the first time I heard about web design. I was a freshman in a google meet during english, at home when my teacher invited the web design teachers to come on the meet to explain the course. It sounded interesting so I looked into it, and went to the zoom interest meeting. It was then added onto my sophomore schedule, and ever since then it became my favorite subject in school. It is great if you want to expand your creativity and express it through websites!
+        </h1>
       </div>
       <div class="col col1"> 
         <h1 class="hsix">Exercise.</h1>
         <img src="dumbell.jpg" class="bballimg" alt="dumbellimg">
-        <h1 class="hseven">Why I like it</h1>
+        <h1 class="hseven">I started weight training in May sophomore year to improve myself. At first it was just to get stronger for basketball, but now it is a hobby beyond that. It helps me work hard, and stay consistent. These skills I learned from lifting weights are applicable in other areas of my life.
+        </h1>
       </div>
 
     </body>
