--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         </div>
         </div>
         <div class="footer1">
-          <a id="footerbutton1" href="http://127.0.0.1:5500/work.html" target="_blank">My Work</a>
+          <a id="footerbutton1" href="https://angelbomova.github.io/Portfolio-3/work.html" target="_blank">My Work</a>
         </div>
         
     
