a lot of peer suggestions

--- a/interest.html
+++ b/interest.html
@@ -48,7 +48,7 @@
       <div class="col col1"> 
         <h1 class="hsix">Web Design.</h1>
         <img src="webdesign.jpg" class="bballimg" alt="webdesignimg">
-        <h1 class="hseven">I remember the first time I heard about web design. I was a freshman in a google meet during english, at home when my teacher invited the web design teachers to come on the meet to explain the course. It sounded interesting so I looked into it, and went to the zoom interest meeting. It was then added onto my sophomore schedule, and ever since then it became my favorite subject in school. It is great if you want to expand your creativity and express it through websites!
+        <h1 class="h8">I remember the first time I heard about web design. I was a freshman in a google meet during english, at home when my teacher invited the web design teachers to come on the meet to explain the course. It sounded interesting so I looked into it, and went to the zoom interest meeting. It was then added onto my sophomore schedule, and ever since then it became my favorite subject in school. It is great if you want to expand your creativity and express it through websites!
         </h1>
       </div>
       <div class="col col1"> 
