--- a/contact.html
+++ b/contact.html
@@ -34,11 +34,11 @@
   </div>
   <div class="col col2">
     <form action="mailto:555mikeman555@gmail.com" method="post" enctype="text/plain">
-     <h1> Name:</h1><br>
+     <h1> <u>Name:</u></h1>
       <input type="text" name="name"><br>
-     <h1> E-mail:</h1><br>
-      <input type="text" name="mail"><br>
-      <h1>Comment:</h1></form><br>
+     <h1> <u>E-mail:</u></h1>
+      <input type="text" name="mail">
+      <h1><u>Comment:</u></h1></form>
       <input type="text" name="comment" size="50"><br><br>
       <input type="submit" value="Send">
       <input type="reset" value="Reset">
