--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="container">
         <img src="pumpkin.png" alt="Avatar" class="image" width="300px" height="300px">
         <div class="overlay">
-          <div class="text">Here is one of my first projects of my 2023-2024 School Year!
+          <div class="text1">Here is one of my first projects of my 2023-2024 School Year!
           </div>
         </div>
       </div>
@@ -60,7 +60,7 @@
       <div class="container">
         <img src="snakegame.png" alt="Avatar" class="image" width="300px" height="300px">
         <div class="overlay">
-          <div class="text">Here is a cool snake game I made using JavaScript!
+          <div class="text1">Here is a cool snake game I made using JavaScript!
           </div>
         </div>
       </div>
