--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 <nav class="navbar">
   <a href="index.html"><img class="navbar-logo" src="angellogo.png" alt="Logo"></a>
   <div class="navbar-links">
-    <a href="about.html">About</a>
+    <a href="about.html" class="hoverglow">About</a>
     <a href="education.html">Education</a>
     <a href="work.html">Work</a>
     <a href="interest.html">Interests</a>
