--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <a href="education.html">Education</a>
     <a href="work.html">Work</a>
     <a href="interest.html">Interests</a>
-    <a href="contact.html">Contact</a>
+    <a href="contact.html" class="hoverglow">Contact</a>
   </div>
 </nav>
 <div class="row">
