--- a/education.html
+++ b/education.html
@@ -22,7 +22,7 @@
   <a href="index.html"><img class="navbar-logo" src="angellogo.png" alt="Logo"></a>
   <div class="navbar-links">
     <a href="about.html">About</a>
-    <a href="education.html">Education</a>
+    <a href="education.html" class="hoverglow">Education</a>
     <a href="work.html">Work</a>
     <a href="interest.html">Interests</a>
     <a href="contact.html">Contact</a>
