--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <nav class="navbar">
-  <a href="index.html"><img class="navbar-logo" src="angellogo.png" alt="Logo"></a>
+  <a href="index.html"><img class="navbar-logo hoverglow" src="angellogo.png" alt="Logo"></a>
   <div class="navbar-links">
     <a href="about.html">About</a>
     <a href="education.html">Education</a>
