--- a/interest.html
+++ b/interest.html
@@ -24,7 +24,7 @@
     <a href="about.html">About</a>
     <a href="education.html">Education</a>
     <a href="work.html">Work</a>
-    <a href="interest.html">Interests</a>
+    <a href="interest.html" class="hoverglow">Interests</a>
     <a href="contact.html">Contact</a>
   </div>
 </nav>
