--- a/work.html
+++ b/work.html
@@ -23,7 +23,7 @@
   <div class="navbar-links">
     <a href="about.html">About</a>
     <a href="education.html">Education</a>
-    <a href="work.html">Work</a>
+    <a href="work.html" class="hoverglow">Work</a>
     <a href="interest.html">Interests</a>
     <a href="contact.html">Contact</a>
   </div>
