--- a/work.html
+++ b/work.html
@@ -48,6 +48,7 @@
           </a>
          </div>
          </div>
+         <div class="col-sm-1"></div>
       <div class="col"> 
         <div class="container1"> 
         <iframe class="responsive-iframe" src="https://year-2-portfolio.angelb10.repl.co/index.html"></iframe>
@@ -59,13 +60,13 @@
         </div>
         <div class="row">
           <div class="col"> 
-              <a id="footerbutton2" href="https://angelbomova.github.io/HTMLCSSBootstrap-Review-Project/" target="_blank"><h1 class="hfive">Bootstrap 5 Website</h1></a>
+              <a id="footerbutton2" href="https://angelbomova.github.io/HTMLCSSBootstrap-Review-Project/" target="_blank"><h1 class="hfive">Client Bootstrap 5 Website</h1></a>
           </div>
             <div class="col"> 
-                <a id="footerbutton2" href="https://randomgames.angelb10.repl.co/" target="_blank"><h1 class="hfive">Insert Website Here</h1></a>
+                <a id="footerbutton2" href="https://randomgames.angelb10.repl.co/" target="_blank"><h1 class="hfive">Pong Game</h1></a>
             </div>
               <div class="col"> 
-                  <a id="footerbutton2" href="https://jackolantern.angelb10.repl.co/" target="_blank"><h1 class="hfive">Insert Website Here</h1></a>
+                  <a id="footerbutton2" href="https://jackolantern.angelb10.repl.co/" target="_blank"><h1 class="hfive">Pumpkin!</h1></a>
               </div>
           </div>
             </body>
