added some projects to work page

--- a/work.html
+++ b/work.html
@@ -69,5 +69,19 @@
                   <a id="footerbutton2" href="https://jackolantern.angelb10.repl.co/" target="_blank"><h1 class="hfive">Pumpkin!</h1></a>
               </div>
           </div>
+
+<br>
+
+          <div class="row">
+            <div class="col"> 
+                <a id="footerbutton2" href="https://angelbomova.github.io/JSON-Gallery-Project/" target="_blank"><h1 class="hfive"> Vacation Slideshow Project</h1></a>
+            </div>
+              <div class="col"> 
+                  <a id="footerbutton2" href="https://1deb21c5-5e9e-404e-939d-6d34c69cf37b-00-1ew4z1a9nn2hq.riker.replit.dev/" target="_blank"><h1 class="hfive">Snake Game</h1></a>
+              </div>
+                <div class="col"> 
+                    <a id="footerbutton2" href="https://angelbomova.github.io/Christmas-Lights-Client-Project/index.html" target="_blank"><h1 class="hfive">Christmas Client Project</h1></a>
+                </div>
+            </div>
             </body>
 </html>
