Fixed up Portfolio 3 changed replits to github sites.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <div class="row">
     <div class="col">   
-      <a href="https://jackolantern.angelb10.repl.co/" target="_blank">
+      <a href="https://angelbomova.github.io/jackolantern/" target="_blank">
         <h1 class="hone">Pumpkin!</h1>
       </a>
       <div class="container">
@@ -54,7 +54,7 @@
        
     </div>
     <div class="col"> 
-      <a href ="https://snakegame1.angelb10.repl.co/" target="_blank">
+      <a href ="https://angelbomova.github.io/snakegame1/" target="_blank">
         <h1 class="hone">Snake Game!</h1>
       </a>
       <div class="container">
