--- a/work.html
+++ b/work.html
@@ -51,8 +51,8 @@
          <div class="col-sm-1"></div>
       <div class="col"> 
         <div class="container1"> 
-        <iframe class="responsive-iframe" src="https://year-2-portfolio.angelb10.repl.co/index.html"></iframe>
-        <br> <a href="https://year-2-portfolio.angelb10.repl.co/index.html" target="_blank">
+        <iframe class="responsive-iframe" src="https://angelbomova.github.io/Year-2-Portfolio/"></iframe>
+        <br> <a href="https://angelbomova.github.io/Year-2-Portfolio/" target="_blank">
           <h1 class="hfive">Year 2 Portfolio!</h1>
         </a>
       </div>
@@ -63,10 +63,10 @@
               <a id="footerbutton2" href="https://angelbomova.github.io/HTMLCSSBootstrap-Review-Project/" target="_blank"><h1 class="hfive">Client Bootstrap 5 Website</h1></a>
           </div>
             <div class="col"> 
-                <a id="footerbutton2" href="https://randomgames.angelb10.repl.co/" target="_blank"><h1 class="hfive">Pong Game</h1></a>
+                <a id="footerbutton2" href="https://angelbomova.github.io/randomgames/" target="_blank"><h1 class="hfive">Pong Game</h1></a>
             </div>
               <div class="col"> 
-                  <a id="footerbutton2" href="https://jackolantern.angelb10.repl.co/" target="_blank"><h1 class="hfive">Pumpkin!</h1></a>
+                  <a id="footerbutton2" href="https://angelbomova.github.io/jackolantern/" target="_blank"><h1 class="hfive">Pumpkin!</h1></a>
               </div>
           </div>
 
@@ -77,11 +77,26 @@
                 <a id="footerbutton2" href="https://angelbomova.github.io/JSON-Gallery-Project/" target="_blank"><h1 class="hfive"> Vacation Slideshow Project</h1></a>
             </div>
               <div class="col"> 
-                  <a id="footerbutton2" href="https://1deb21c5-5e9e-404e-939d-6d34c69cf37b-00-1ew4z1a9nn2hq.riker.replit.dev/" target="_blank"><h1 class="hfive">Snake Game</h1></a>
+                  <a id="footerbutton2" href="https://angelbomova.github.io/snakegame1/" target="_blank"><h1 class="hfive">Snake Game</h1></a>
               </div>
                 <div class="col"> 
                     <a id="footerbutton2" href="https://angelbomova.github.io/Christmas-Lights-Client-Project/index.html" target="_blank"><h1 class="hfive">Christmas Client Project</h1></a>
                 </div>
             </div>
+
+            <br>
+
+            <div class="row">
+              <div class="col"> 
+                  <a id="footerbutton2" href="https://angelbomova.github.io/Js-tutorial-1/" target="_blank"><h1 class="hfive">JS Tutorial 1</h1></a>
+              </div>
+                <div class="col"> 
+                    <a id="footerbutton2" href="https://google.com" target="_blank"><h1 class="hfive">Filler Website</h1></a>
+                </div>
+                  <div class="col"> 
+                      <a id="footerbutton2" href="https://google.com" target="_blank"><h1 class="hfive">Filler Website</h1></a>
+                  </div>
+              </div>
+
             </body>
 </html>
