added websites that I made

--- a/work.html
+++ b/work.html
@@ -91,12 +91,40 @@
                   <a id="footerbutton2" href="https://angelbomova.github.io/Js-tutorial-1/" target="_blank"><h1 class="hfive">JS Tutorial 1</h1></a>
               </div>
                 <div class="col"> 
-                    <a id="footerbutton2" href="https://google.com" target="_blank"><h1 class="hfive">Filler Website</h1></a>
+                    <a id="footerbutton2" href="https://angelbomova.github.io/JSON-Gallery-Project/" target="_blank"><h1 class="hfive">Gallery Project</h1></a>
                 </div>
                   <div class="col"> 
-                      <a id="footerbutton2" href="https://google.com" target="_blank"><h1 class="hfive">Filler Website</h1></a>
+                      <a id="footerbutton2" href="https://angelbomova.github.io/NJIT-Moive-Poster-Project-3--Attempt-2-/" target="_blank"><h1 class="hfive">Movie Poster Project</h1></a>
                   </div>
               </div>
+
+              <br>
+
+              <div class="row">
+                <div class="col"> 
+                  <a id="footerbutton2" href="https://angelbomova.github.io/Vue-3-Firebase-master/" target="_blank"><h1 class="hfive">Vue Tutorial</h1></a>
+              </div>
+                  <div class="col"> 
+                      <a id="footerbutton2" href="https://angelbomova.github.io/Boston-Celtics-2024-Champs-Choice-Project/" target="_blank"><h1 class="hfive">Boston Celtics Project</h1></a>
+                  </div>
+                    <div class="col"> 
+                        <a id="footerbutton2" href="https://angelbomova.github.io/Magic-8-Ball-Project/" target="_blank"><h1 class="hfive">Magic 8ball App</h1></a>
+                    </div>
+                </div>
+
+                <br>
+
+                <div class="row">
+                  <div class="col"> 
+                    <a id="footerbutton2" href="https://angelbomova.github.io/Mad-Libs-Website/" target="_blank"><h1 class="hfive">Mad Libs Website</h1></a>
+                </div>
+                    <div class="col"> 
+                        <a id="footerbutton2" href="https://google.com" target="_blank"><h1 class="hfive">Filler Website</h1></a>
+                    </div>
+                      <div class="col"> 
+                          <a id="footerbutton2" href="https://google.com" target="_blank"><h1 class="hfive">Filler Website</h1></a>
+                      </div>
+                  </div>
 
             </body>
 </html>
