Added new website

--- a/work.html
+++ b/work.html
@@ -119,7 +119,7 @@
                     <a id="footerbutton2" href="https://angelbomova.github.io/Mad-Libs-Website/" target="_blank"><h1 class="hfive">Mad Libs Website</h1></a>
                 </div>
                     <div class="col"> 
-                        <a id="footerbutton2" href="https://google.com" target="_blank"><h1 class="hfive">Filler Website</h1></a>
+                        <a id="footerbutton2" href="https://angelbomova.github.io/Birthday-Project/" target="_blank"><h1 class="hfive">Birthday Website</h1></a>
                     </div>
                       <div class="col"> 
                           <a id="footerbutton2" href="https://google.com" target="_blank"><h1 class="hfive">Filler Website</h1></a>
